Fix horizontal scrollbar styling

--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -205,6 +205,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          height: 100%;
 
           h2 {
             font-size: 1.6rem;
